--- a/Anna_KaRNNa.ipynb
+++ b/Anna_KaRNNa.ipynb
@@ -15,8 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -35,8 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('anna.txt', 'r') as f:\n",
@@ -56,9 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text[:100]"
    ]
@@ -72,9 +87,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31, 64, 57, 72, 76, 61, 74,  1, 16,  0,  0,  0, 36, 57, 72, 72, 81,\n",
+       "        1, 62, 57, 69, 65, 68, 65, 61, 75,  1, 57, 74, 61,  1, 57, 68, 68,\n",
+       "        1, 57, 68, 65, 67, 61, 26,  1, 61, 78, 61, 74, 81,  1, 77, 70, 64,\n",
+       "       57, 72, 72, 81,  1, 62, 57, 69, 65, 68, 81,  1, 65, 75,  1, 77, 70,\n",
+       "       64, 57, 72, 72, 81,  1, 65, 70,  1, 65, 76, 75,  1, 71, 79, 70,  0,\n",
+       "       79, 57, 81, 13,  0,  0, 33, 78, 61, 74, 81, 76, 64, 65, 70], dtype=int32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encoded[:100]"
    ]
@@ -88,9 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(vocab)"
    ]
@@ -123,8 +165,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_batches(arr, batch_size, n_steps):\n",
@@ -138,20 +182,29 @@
     "       n_steps: Number of sequence steps per batch\n",
     "    '''\n",
     "    # Get the number of characters per batch and number of batches we can make\n",
-    "    characters_per_batch = \n",
-    "    n_batches = \n",
+    "    characters_per_batch = batch_size * n_steps\n",
+    "    n_batches = len(arr)//characters_per_batch\n",
     "    \n",
     "    # Keep only enough characters to make full batches\n",
-    "    arr = \n",
+    "    arr = arr[:n_batches * characters_per_batch]\n",
     "    \n",
     "    # Reshape into batch_size rows\n",
-    "    arr = \n",
+    "    arr = arr.reshape((batch_size, -1))\n",
     "    \n",
     "    for n in range(0, arr.shape[1], n_steps):\n",
     "        # The features\n",
-    "        x = \n",
+    "        x = arr[:, n:n+n_steps]\n",
+    "        # NOTE: the following code was extracted from udacity solution\n",
     "        # The targets, shifted by one\n",
-    "        y = \n",
+    "        y_temp = arr[:, n+1:n+n_steps+1]\n",
+    "        \n",
+    "        # For the very last batch, y will be one character short at the end of \n",
+    "        # the sequences which breaks things. To get around this, I'll make an \n",
+    "        # array of the appropriate size first, of all zeros, then add the targets.\n",
+    "        # This will introduce a small artifact in the last batch, but it won't matter.\n",
+    "        y = np.zeros(x.shape, dtype=x.dtype)\n",
+    "        y[:,:y_temp.shape[1]] = y_temp\n",
+    "        \n",
     "        yield x, y"
    ]
   },
@@ -164,8 +217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batches = get_batches(encoded, 10, 50)\n",
@@ -174,9 +229,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      " [[31 64 57 72 76 61 74  1 16  0]\n",
+      " [ 1 57 69  1 70 71 76  1 63 71]\n",
+      " [78 65 70 13  0  0  3 53 61 75]\n",
+      " [70  1 60 77 74 65 70 63  1 64]\n",
+      " [ 1 65 76  1 65 75 11  1 75 65]\n",
+      " [ 1 37 76  1 79 57 75  0 71 70]\n",
+      " [64 61 70  1 59 71 69 61  1 62]\n",
+      " [26  1 58 77 76  1 70 71 79  1]\n",
+      " [76  1 65 75 70  7 76 13  1 48]\n",
+      " [ 1 75 57 65 60  1 76 71  1 64]]\n",
+      "\n",
+      "y\n",
+      " [[64 57 72 76 61 74  1 16  0  0]\n",
+      " [57 69  1 70 71 76  1 63 71 65]\n",
+      " [65 70 13  0  0  3 53 61 75 11]\n",
+      " [ 1 60 77 74 65 70 63  1 64 65]\n",
+      " [65 76  1 65 75 11  1 75 65 74]\n",
+      " [37 76  1 79 57 75  0 71 70 68]\n",
+      " [61 70  1 59 71 69 61  1 62 71]\n",
+      " [ 1 58 77 76  1 70 71 79  1 75]\n",
+      " [ 1 65 75 70  7 76 13  1 48 64]\n",
+      " [75 57 65 60  1 76 71  1 64 61]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('x\\n', x[:10, :10])\n",
     "print('\\ny\\n', y[:10, :10])"
@@ -235,8 +320,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def build_inputs(batch_size, num_steps):\n",
@@ -249,11 +336,11 @@
     "        \n",
     "    '''\n",
     "    # Declare placeholders we'll feed into the graph\n",
-    "    inputs = \n",
-    "    targets = \n",
+    "    inputs = tf.placeholder(tf.int32, [batch_size, num_steps], name='inputs')\n",
+    "    targets = tf.placeholder(tf.int32, [batch_size, num_steps], name='targets')\n",
     "    \n",
     "    # Keep probability placeholder for drop out layers\n",
-    "    keep_prob = \n",
+    "    keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
     "    \n",
     "    return inputs, targets, keep_prob"
    ]
@@ -308,10 +395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "\n",
     "def build_lstm(lstm_size, num_layers, batch_size, keep_prob):\n",
     "    ''' Build LSTM cell.\n",
     "    \n",
@@ -324,15 +414,16 @@
     "\n",
     "    '''\n",
     "    ### Build the LSTM Cell\n",
-    "    # Use a basic LSTM cell\n",
-    "    lstm = \n",
-    "    \n",
-    "    # Add dropout to the cell outputs\n",
-    "    drop = \n",
+    "    def build_cell(lstm_size, keep_prob):\n",
+    "        # Use a basic LSTM cell\n",
+    "        lstm = tf.contrib.rnn.BasicLSTMCell(lstm_size)\n",
+    "        # Add dropout to the cell outputs\n",
+    "        drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "        return drop\n",
     "    \n",
     "    # Stack up multiple LSTM layers, for deep learning\n",
-    "    cell = \n",
-    "    initial_state = \n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([build_cell(lstm_size, keep_prob) for _ in range(num_layers)])\n",
+    "    initial_state = cell.zero_state(batch_size, tf.float32)\n",
     "    \n",
     "    return cell, initial_state"
    ]
@@ -356,8 +447,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def build_output(lstm_output, in_size, out_size):\n",
@@ -374,22 +467,22 @@
     "\n",
     "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
     "    # Concatenate lstm_output over axis 1 (the columns)\n",
-    "    seq_output = \n",
+    "    seq_output = tf.concat(lstm_output, axis=1)\n",
     "    # Reshape seq_output to a 2D tensor with lstm_size columns\n",
-    "    x = \n",
+    "    x = tf.reshape(seq_output, [-1, in_size])\n",
     "    \n",
     "    # Connect the RNN outputs to a softmax layer\n",
     "    with tf.variable_scope('softmax'):\n",
     "        # Create the weight and bias variables here\n",
-    "        softmax_w = \n",
-    "        softmax_b = \n",
+    "        softmax_w = tf.Variable(tf.truncated_normal((in_size, out_size), stddev=0.1))\n",
+    "        softmax_b = tf.Variable(tf.zeros(out_size))\n",
     "    \n",
     "    # Since output is a bunch of rows of RNN cell outputs, logits will be a bunch\n",
     "    # of rows of logit outputs, one for each step and sequence\n",
-    "    logits = \n",
+    "    logits = tf.matmul(x, softmax_w) + softmax_b\n",
     "    \n",
     "    # Use softmax to get the probabilities for predicted characters\n",
-    "    out = \n",
+    "    out = tf.nn.softmax(logits, name='predictions')\n",
     "    \n",
     "    return out, logits"
    ]
@@ -410,7 +503,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def build_loss(logits, targets, lstm_size, num_classes):\n",
@@ -426,12 +521,12 @@
     "    '''\n",
     "    \n",
     "    # One-hot encode targets and reshape to match logits, one row per sequence per step\n",
-    "    y_one_hot = \n",
-    "    y_reshaped =  \n",
+    "    y_one_hot = tf.one_hot(targets, num_classes)\n",
+    "    y_reshaped = tf.reshape(y_one_hot, logits.get_shape())\n",
     "    \n",
     "    # Softmax cross entropy loss\n",
-    "    loss = \n",
-    "    \n",
+    "    loss = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=y_reshaped)\n",
+    "    loss = tf.reduce_mean(loss)\n",
     "    return loss"
    ]
   },
@@ -446,8 +541,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def build_optimizer(loss, learning_rate, grad_clip):\n",
@@ -481,8 +578,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class CharRNN:\n",
@@ -501,25 +600,25 @@
     "        tf.reset_default_graph()\n",
     "        \n",
     "        # Build the input placeholder tensors\n",
-    "        self.inputs, self.targets, self.keep_prob = \n",
+    "        self.inputs, self.targets, self.keep_prob = build_inputs(batch_size, num_steps)\n",
     "\n",
     "        # Build the LSTM cell\n",
-    "        cell, self.initial_state = \n",
+    "        cell, self.initial_state = build_lstm(lstm_size, num_layers, batch_size, self.keep_prob)\n",
     "\n",
     "        ### Run the data through the RNN layers\n",
     "        # First, one-hot encode the input tokens\n",
-    "        x_one_hot = \n",
+    "        x_one_hot = tf.one_hot(self.inputs, num_classes)\n",
     "        \n",
     "        # Run each sequence step through the RNN with tf.nn.dynamic_rnn \n",
-    "        outputs, state =\n",
+    "        outputs, state = tf.nn.dynamic_rnn(cell, x_one_hot, initial_state=self.initial_state)\n",
     "        self.final_state = state\n",
     "        \n",
     "        # Get softmax predictions and logits\n",
-    "        self.prediction, self.logits = \n",
+    "        self.prediction, self.logits = build_output(outputs, lstm_size, num_classes)\n",
     "        \n",
     "        # Loss and optimizer (with gradient clipping)\n",
-    "        self.loss =  \n",
-    "        self.optimizer = "
+    "        self.loss =  build_loss(self.logits, self.targets, lstm_size, num_classes)\n",
+    "        self.optimizer = build_optimizer(self.loss, learning_rate, grad_clip)"
    ]
   },
   {
@@ -570,8 +669,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size = 10         # Sequences per batch\n",
@@ -603,7 +704,22 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 83)\n",
+      "Epoch: 1/20...  Training Step: 50...  Training loss: 3.1524...  0.1000 sec/batch\n",
+      "Epoch: 1/20...  Training Step: 100...  Training loss: 2.7106...  0.1079 sec/batch\n",
+      "Epoch: 1/20...  Training Step: 150...  Training loss: 2.4110...  0.0993 sec/batch\n",
+      "Epoch: 1/20...  Training Step: 200...  Training loss: 2.4614...  0.1093 sec/batch\n",
+      "Epoch: 1/20...  Training Step: 250...  Training loss: 2.3449...  0.1006 sec/batch\n",
+      "Epoch: 1/20...  Training Step: 300...  Training loss: 2.2128...  0.0996 sec/batch\n",
+      "Epoch: 1/20...  Training Step: 350...  Training loss: 2.2019...  0.1019 sec/batch\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 20\n",
     "# Print losses every N interations\n",
@@ -663,7 +779,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tf.train.get_checkpoint_state('checkpoints')"
@@ -684,7 +802,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def pick_top_n(preds, vocab_size, top_n=5):\n",
@@ -698,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sample(checkpoint, n_samples, lstm_size, vocab_size, prime=\"The \"):\n",
@@ -744,7 +866,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tf.train.latest_checkpoint('checkpoints')"
@@ -753,7 +877,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint = tf.train.latest_checkpoint('checkpoints')\n",
@@ -764,7 +890,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint = 'checkpoints/i200_l512.ckpt'\n",
@@ -775,7 +903,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint = 'checkpoints/i600_l512.ckpt'\n",
@@ -786,7 +916,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint = 'checkpoints/i1200_l512.ckpt'\n",
@@ -811,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
